# ai-hedge-fund

./: .env.local  CLAUDE.md  MIGRATION_TO_UV.md  README.md  pyproject.toml  requirements-dev.in  requirements.in  run_cli.sh
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.claude/: settings.local.json
app/: README.md  run_uv.bat  run_uv.sh
